correct copyright text-align

--- a/styles.css
+++ b/styles.css
@@ -111,6 +111,7 @@ body {
 
 .copyright {
     margin-left: 20px;
+    text-align: left;
 }
 
 
